--- a/views/login.ejs
+++ b/views/login.ejs
@@ -31,8 +31,10 @@
       justify-content: center;
       align-items: center;
       min-height: 110vh;
-      background: rgba(39, 39, 39, 0.4);
-    }
+      background-color: #2d3436;
+background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
+   
+}
     .nav {
       position: fixed;
       top: 0;
@@ -140,7 +142,7 @@
     }
     .input-field {
       font-size: 15px;
-      background: rgba(255, 255, 255, 0.2);
+      background: #ffffff40;
       color: #fff;
       height: 50px;
       width: 100%;
@@ -172,14 +174,17 @@
       border: none;
       border-radius: 30px;
       outline: none;
-      background: rgba(255, 255, 255, 0.7);
+      background: rgba(255, 255, 255, 0.829);
+
       cursor: pointer;
       transition: 0.3s ease-in-out;
     }
     .submit:hover {
-      background: rgba(255, 255, 255, 0.5);
+      background: rgb(255, 255, 255);
+      border:2px solid #fdfdfd;
       box-shadow: 1px 5px 7px 1px rgba(0, 0, 0, 0.2);
     }
+    
     .two-col {
       display: flex;
       justify-content: space-between;
@@ -254,12 +259,52 @@
         gap: 0;
       }
     }
+    mdiv {
+
+overflow: hidden;
+height: 40px;
+transform: scale(3);
+
+}
+
+.hello-container {
+transform: translateX(-100px);
+transform: scale(3);
+}
+
+/*70px => hidden ; 0px => shown*/
+h1{
+transform: translateY(70px);
+font-size: 3em;
+}
+
+.hello {
+animation-name: slideUp;
+animation-duration:     .5s;
+animation-fill-mode: both;
+animation-timing-function: ease-in;
+
+}
+
+
+
+@keyframes slideUp {
+from {
+  opacity: 0;
+  transform: translateY(60px)
+}
+
+to {
+  opacity: 1;
+  transform: translateY(-20px)
+}
+}
   </style>
   <body>
     <div class="wrapper">
       <nav class="nav">
         <div class="nav-logo">
-          <p>SPICE SWIFT</p>
+          <p>XOMETO</p>
         </div>
         <div class="nav-menu" id="navMenu">
           <ul>
@@ -282,25 +327,27 @@
           <i class="bx bx-menu" onclick="myMenuFunction()"></i>
         </div>
       </nav>
+      
       <!----------------------------- Form box ----------------------------------->
+
       <div class="form-box">
-        <!------------------- login form -------------------------->
+
+      <!------------------- login form -------------------------->
         <div class="login-container" id="login">
           <div class="top">
-            <span
-              >Don't have an account?
-              <a href="signup" onclick="register()">Sign Up</a></span
-            >
-            <header>Login</header>
+           
+            <header>
+              <mdiv class= "hello-container">
+                  <h2 class="hello">LOG IN</h2>
+                </mdiv>
+          </header>
           </div>
           <form action="/v1/user/login" method="post">
             <div class="input-box">
               <input
                 type="text"
                 class="input-field"
-                placeholder="Username or Email"
-                name="email"
-              />
+                placeholder="Username or Email" name="email"/>
               <i class="bx bx-user"></i>
             </div>
             <div class="input-box">
