--- a/views/addpayment.ejs
+++ b/views/addpayment.ejs
@@ -128,10 +128,13 @@
           <input type="text" placeholder="Payment Type" name="type" required />
         </div>
         <div class="input-box">
+          <input type="text" placeholder="Order Id" name="order" required />
+        </div>
+        <div class="input-box">
           <input type="text" placeholder="Total Amount" name="totalAmount" required />
         </div>
         <div class="input-box">
-          <input type="text" placeholder="Date" name="date" required />
+          <input type="date" placeholder="" name="date" required />
         </div>
         <div class="input-box">
           <input type="text" placeholder="User Id" name="user" required />
